# space-colonist

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.json  items.json  situations.json
docs/: calcs.xlsx
src/: CMakeLists.txt  game.cpp  game.h  game_deps.h  game_state.h  game_tasks.h  input_listener.h  main.cpp
src/asset-source/: single_asset.h
src/assets/: arrival_station.h  departure_station.h  ship_a.h
src/config/: config.h  item_source.h  situation_source.h
src/logging/: logging.h
src/loop_control/: CMakeLists.txt  task.cpp  task.h  task_pool.cpp  task_pool.h  watchdog.h
src/play/: CMakeLists.txt  crew_factory.cpp  crew_factory.h  crew_member.cpp  crew_member.h  flying_debris.cpp  flying_debris.h  game_ui.cpp  game_ui.h  item.cpp  item.h  map_generator.cpp  map_generator.h  menu_options.h  nav_control_manager.cpp  nav_control_manager.h  pause_menu.cpp  pause_menu.h  running_ui.cpp  running_ui.h  setup_ui.cpp  setup_ui.h  situation_type.h  space_map.cpp  space_map.h  spaceship.cpp  spaceship.h  spaceship_factory.cpp  spaceship_factory.h  spaceship_handler.cpp  spaceship_handler.h
src/play/items/: item.cpp  item.h
src/play/objects/: crew_factory.cpp  crew_factory.h  crew_member.cpp  crew_member.h  spaceship.cpp  spaceship.h
src/play/situation/: CMakeLists.txt  air_filter_failure.cpp  air_filter_failure.h  major_hull_breach.cpp  major_hull_breach.h  major_situation.cpp  major_situation.h  minor_situation.cpp  minor_situation.h  situation.cpp  situation.h  situation_factory.cpp  situation_factory.h  situation_manager.cpp  situation_manager.h  situation_type.h  standard_engine_failure.cpp  standard_engine_failure.h
src/play/ui/: CMakeLists.txt  hud_display.cpp  hud_display.h  inventory_ui.cpp  inventory_ui.h  pause_menu.cpp  pause_menu.h  running_ui.cpp  running_ui.h  setup_ui.cpp  setup_ui.h  store_ui.cpp  store_ui.h
src/tasks/: pause_input.h  running_input.h
src/test/: CMakeLists.txt  crew_member.cpp  test.cpp  test_crew_factory.cpp  test_crew_member.cpp  test_flying_debris.cpp  test_item.cpp  test_main.cpp  test_space_map.cpp  test_spaceship_factory.cpp  test_spaceship_handler.cpp
src/windows/: CMakeLists.txt  intro.cpp  intro.h  pause_menu.cpp  pause_menu.h
